--- a/Proyecto/src/main/resources/application.properties
+++ b/Proyecto/src/main/resources/application.properties
@@ -11,13 +11,13 @@ spring.main.banner-mode=off
 spring.thymeleaf.cache = false
 
 #MySql conexion
-#spring.datasource.url=jdbc:mysql://localhost:3306/techshop?useTimezone=true&serverTimezone=UTC
-#spring.datasource.username=usuario_prueba
-#spring.datasource.password=Usuar1o_Clave.
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.datasource.url=jdbc:mysql://localhost:3306/techshop?useTimezone=true&serverTimezone=UTC
+spring.datasource.username=usuario_proyecto
+spring.datasource.password=proyecto123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 #mostrar informaci\u00c3\u00b3n en el log
-#spring.jpa.properties.hibernate.format_sql=true
-#logging.level.org.hibernate.SQL=DEBUG
-#logging.level.org.type.descriptor.sql.BasicBinder=TRACE
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.type.descriptor.sql.BasicBinder=TRACE
