--- a/Proyecto/src/main/resources/application.properties
+++ b/Proyecto/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.main.banner-mode=off
 spring.thymeleaf.cache = false
 
 #MySql conexion
-spring.datasource.url=jdbc:mysql://localhost:3306/techshop?useTimezone=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/Titox?useTimezone=true&serverTimezone=UTC
 spring.datasource.username=usuario_proyecto
 spring.datasource.password=proyecto123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
