--- a/Proyecto/pom.xml
+++ b/Proyecto/pom.xml
@@ -93,6 +93,11 @@
             <version>6.1.3</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>2.0.1.Final</version>
+        </dependency>
     </dependencies>
 
     <build>
