--- a/Proyecto/src/main/resources/application.properties
+++ b/Proyecto/src/main/resources/application.properties
@@ -3,6 +3,7 @@ server.port=80
 
 #Para definir el formato de despliegue de la fecha y hora del log de consola.
 logging.pattern.dateformat=hh:mm
+logging.level.org.springframework.security=DEBUG
 
 #Para eliminar mensajes invasivos.
 spring.main.banner-mode=off
